# proc-macro-workshop

debug/: Cargo.toml
debug/src/: lib.rs
