[package]
name = "derive_debug"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[test]]
name = "current"
path = "tests/04-type-parameter.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
# TODO
syn = "1.0"
quote = "1.0"
